Bug 91174 - Resource leak: alloc_fd and Resource leak: dev_fd
Summary: Resource leak: alloc_fd and Resource leak: dev_fd
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: Other All
: medium minor
Assignee: Manish
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-01 11:28 UTC by Manish
Modified: 2015-07-21 14:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Manish 2015-07-01 11:28:10 UTC

    
Comment 1 Manish 2015-07-01 11:29:57 UTC
In module xen there is resource leak in file module-xenpv-sink.c. In function alloc_gref() resource alloc_fd and dev_fd has not been freed in error case.
Comment 2 Peter Meerwald 2015-07-21 14:52:27 UTC
patch applied


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.